--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Home</title>
 </head>
+
 <body>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, nesciunt! Vero laudantium velit expedita illo blanditiis molestias quo soluta nobis, sint quisquam! Accusamus eos sunt quasi placeat omnis unde qui!
-    </p>
+    <header>
+        <div class="container">
+            <a href="#" class="logo">
+                <img src="./assets/imges/Logo.png" alt="">
+            </a>
+
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Package <i class="fa-sharp fa-solid fa-chevron-down"></i></a></li>
+                    <li><a href="#">Destination <i class="fa-sharp fa-solid fa-chevron-down"></i></a></li>
+                    <li><a href="#">Blog <i class="fa-sharp fa-solid fa-chevron-down"></i></a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+
+            <a href="#" class="sreach">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </a>
+
+        </div>
+    </header>
 </body>
+
 </html>
