--- a/index.html
+++ b/index.html
@@ -40,36 +40,51 @@
 
     <main>
         <section id="hero">
-            <div class="hero-data">
-                <h1>Make in <br>your journey.</h1>
-                <p>Explore the world with what you love beautiful  <br> natural beauty.</p>
+            <div class="container">
+                <div class="hero-data">
+                    <h1>Make in <br>your journey.</h1>
+                    <p>Explore the world with what you love beautiful <br> natural beauty.</p>
+
+                    <div class="search">
+                        <form action="" class="search-data">
+                            <select name="Location">
+                                <option value="0">Location</option>
+                                <option value="surat">Surat</option>
+                                <option value="vapi">Vapi</option>
+                                <option value="broda">Broda</option>
+                            </select>
+                            <select name="date">
+                                <option value="0">Date</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
+                            <select name="People">
+                                <option value="0">People</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                            </select>
+                        
+
+                        <input  class="explore-btn" type="submit" value="Explore now">
+                    </div>
+                </form>
+
+                    <p> <span> Popular Place :</span> Bali, Istanbul, Rome, Paris.</p>
+                </div>
             </div>
+        </section>
 
-            <div class="search">
-                <select name="Location">
-                    <option value="0">Location</option>
-                    <option value="surat">Surat</option>
-                    <option value="vapi">Vapi</option>
-                    <option value="broda">Broda</option>
-                </select>
-                <select name="date">
-                    <option value="0">Date</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
-                <select name="People">
-                    <option value="0">People</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
 
-               <input type="submit" value="Explore now">
+        <section id="explore">
+            <div class="container">
+                <div class="main-title">
+                    <h2>Explore new worlds with <br>
+                        exotic natural scenery </h2>
+                    <p> Explore the world with what you love beautiful natural beauty.</p>
+                </div>
             </div>
-
-            <p> <span> Popular Place :</span> Bali, Istanbul, Rome, Paris.</p>
-
         </section>
     </main>
 
