--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to dive.</p>
+                                                then need to <br>  dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -404,7 +404,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to dive.</p>
+                                                then need to  <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -427,7 +427,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to dive.</p>
+                                                then need to  <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -450,7 +450,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to dive.</p>
+                                                then need to  <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -473,7 +473,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to dive.</p>
+                                                then need to  <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -497,7 +497,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to dive.</p>
+                                                then need to  <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -521,7 +521,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to dive.</p>
+                                                then need to <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -549,9 +549,62 @@
         </section>
 
 
-        <footer>
-            <img src="./assets/imges/Group 222.png" alt="">
-        </footer>
+        
+    <footer>
+        <div class="">
+
+        </div>
+        <section id="travelers">
+            <div class="container">
+                <div class="travel">
+                    <div class="travelers">
+                        <div class="travelers-img">
+                            <img src="./assets/imges/Group 222.png" alt="">
+                        </div>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit. Quisque pharetra
+                                condimentum.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="contact">
+                        <h4>Contact Information</h4>
+                        <ul>
+                            <li> <a href="#"><i class="fa-solid fa-location-dot"></i></a> 732 Despard St, Atlanta</li>
+                            <li> <a href="#"><i class="fa-solid fa-envelope"></i></a> +97 888 8888</li>
+                            <li> <a href="#"><i class="fa-solid fa-phone"></i></a> info@traveller.com</li>
+                        </ul>
+                    </div>
+                    <div class="link">
+                        <h4>Quick Link</h4>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Tours</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="follow-us">
+                        <h4>Follow Us</h4>
+                        <div class="follow-icon">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="copy">
+                <p>Copyright © 2021 UNQ Design</p>
+            </div>
+        </section>
+    </footer>
+
+
 
 
     </main>
