--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <div class="explore-circle">
                                         <span> “</span>
                                     </div>
-                                    <h4>Bali, Indonesia.</h4>
+                                    <h4>nature village</h4>
                                     <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
                                 </div>
                             </div>
@@ -134,13 +134,37 @@
                                     <div class="explore-circle">
                                         <span> “</span>
                                     </div>
-                                    <h4>Bali, Indonesia.</h4>
+                                    <h4>nature flower</h4>
                                     <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="card-img">
                                     <img src="./assets/imges/pexels-obo-teng-15478201.jpg" alt="">
+                                </div>
+                                <div class="card-data">
+                                    <div class="explore-circle">
+                                        <span>“</span>
+                                    </div>
+                                    <h4>beautiful birds</h4>
+                                    <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="card-img">
+                                    <img src="./assets/imges/pexels-χρηστοσ-μιχαλαινασ-15475385.jpg" alt="">
+                                </div>
+                                <div class="card-data">
+                                    <div class="explore-circle">
+                                        <span>“</span>
+                                    </div>
+                                    <h4>morning sunset</h4>
+                                    <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="card-img">
+                                    <img src="./assets/imges/pexels-leeloo-thefirst-5227440 (1).jpg" alt="">
                                 </div>
                                 <div class="card-data">
                                     <div class="explore-circle">
@@ -158,19 +182,7 @@
                                     <div class="explore-circle">
                                         <span>“</span>
                                     </div>
-                                    <h4>Bali, Indonesia.</h4>
-                                    <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card-img">
-                                    <img src="./assets/imges/pexels-leeloo-thefirst-5227440 (1).jpg" alt="">
-                                </div>
-                                <div class="card-data">
-                                    <div class="explore-circle">
-                                        <span>“</span>
-                                    </div>
-                                    <h4>Bali, Indonesia.</h4>
+                                    <h4>morning sunset</h4>
                                     <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
                                 </div>
                             </div>
@@ -182,19 +194,7 @@
                                     <div class="explore-circle">
                                         <span>“</span>
                                     </div>
-                                    <h4>Bali, Indonesia.</h4>
-                                    <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="card-img">
-                                    <img src="./assets/imges/pexels-obo-teng-15478201.jpg" alt="">
-                                </div>
-                                <div class="card-data">
-                                    <div class="explore-circle">
-                                        <span>“</span>
-                                    </div>
-                                    <h4>Bali, Indonesia.</h4>
+                                    <h4>beautiful birds</h4>
                                     <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
                                 </div>
                             </div>
@@ -206,7 +206,7 @@
                                     <div class="explore-circle">
                                         <span> “</span>
                                     </div>
-                                    <h4>Bali, Indonesia.</h4>
+                                    <h4>nature flower</h4>
                                     <p>Bali is a beautiful tourist spot and is visited by many travelers. </p>
                                 </div>
                             </div>
@@ -381,7 +381,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to <br>  dive.</p>
+                                                then need to <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -404,7 +404,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to  <br> dive.</p>
+                                                then need to <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -427,7 +427,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to  <br> dive.</p>
+                                                then need to <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -450,7 +450,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to  <br> dive.</p>
+                                                then need to <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -473,7 +473,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to  <br> dive.</p>
+                                                then need to <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -497,7 +497,7 @@
                                             </a>
                                             <p>Before we define any approach, we need to deline the brands overall goal.
                                                 We
-                                                then need to  <br> dive.</p>
+                                                then need to <br> dive.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -548,13 +548,10 @@
             </form>
         </section>
 
+    </main>
 
-        
     <footer>
-        <div class="">
-
-        </div>
-        <section id="travelers">
+        <section id="travelers top">
             <div class="container">
                 <div class="travel">
                     <div class="travelers">
@@ -598,16 +595,19 @@
                 </div>
 
             </div>
+        </section>
+
+        <section id="bottom">
             <div class="copy">
                 <p>Copyright © 2021 UNQ Design</p>
             </div>
         </section>
+
+
     </footer>
 
 
 
-
-    </main>
 
 
 
