--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
     </main>
 
     <footer>
-        <section id="travelers top">
+        <section id="travelers-top">
             <div class="containor">
                 <div class="travel">
                     <div class="travelers">
