--- a/index.html
+++ b/index.html
@@ -627,54 +627,30 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide">
-                                    <div class="swiper-clt">
-                                        <div class="client-bio">
-                                            <div class="client-img">
-                                                <img src="./assets/imges/client 2.png" alt="">
-                                            </div>
-                                            <div class="client-data">
-                                                <div class="client-name">
-                                                    <h4>Cristian Daniel</h4>
-                                                    <p>Treveller</p>
+                                
+                                    <div class="swiper-slide">
+                                        <div class="swiper-clt">
+                                            <div class="client-bio">
+                                                <div class="client-img">
+                                                    <img src="./assets/imges/client 1.png" alt="">
                                                 </div>
-                                                <a href="#">
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                </a>
-                                                <p>Before we define any approach, we need to deline the brands overall
-                                                    goal.
-                                                    We
-                                                    then need to dive.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="swiper-clt">
-                                        <div class="client-bio">
-                                            <div class="client-img">
-                                                <img src="./assets/imges/client 1.png" alt="">
-                                            </div>
-                                            <div class="client-data">
-                                                <div class="client-name">
-                                                    <h4>Cristian Daniel</h4>
-                                                    <p>Treveller</p>
+                                                <div class="client-data">
+                                                    <div class="client-name">
+                                                        <h4>Cristian Daniel</h4>
+                                                        <p>Treveller</p>
+                                                    </div>
+                                                    <a href="#">
+                                                        <i c display: flex; justify-content: space-between;
+                                                            padding-bottom: 7rem; class="fa-sharp fa-solid fa-star"></i>
+                                                        <i class="fa-sharp fa-solid fa-star"></i>
+                                                        <i class="fa-sharp fa-solid fa-star"></i>
+                                                    </a>
+                                                    <p>Before we define any approach, we need to deline the brands
+                                                        overall
+                                                        goal.
+                                                        We
+                                                        then need to dive.</p>
                                                 </div>
-                                                <a href="#">
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                    <i class="fa-sharp fa-solid fa-star"></i>
-                                                </a>
-                                                <p>Before we define any approach, we need to deline the brands overall
-                                                    goal.
-                                                    We
-                                                    then need to dive.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -683,21 +659,22 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
 
 
         <section id="subcribe">
-            <div class="main-title">
-                <h2>Subcribe to get special price</h2>
-                <p>Dont wanna miss something? subscribe right
-                    now and get special <br> promotion and monthly newsletter
-                </p>
+            <div class="containor">
+                <div class="main-title">
+                    <h2>Subcribe to get special price</h2>
+                    <p>Dont wanna miss something? subscribe right
+                        now and get special <br> promotion and monthly newsletter
+                    </p>
+                </div>
+                <form action="" class="Subcribe-form">
+                    <input class="email-form" type="email" name="email" placeholder="Type your  email here">
+                    <input type="button" value="Subscribe" class="Subscribe">
+                </form>
             </div>
-            <form action="" class="Subcribe-form">
-                <input class="email-form" type="email" name="email" placeholder="Type your  email here">
-                <input type="button" value="Subscribe" class="Subscribe">
-            </form>
         </section>
 
     </main>
